--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
+    "@types/node": "^18.16.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -35,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "postcss": "^8.4.23",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
